# employee-attrition-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: employee-attrition-prediction.ipynb
src/: employee-attrition-prediction.ipynb
