[project]
name = "employee-attrition-prediction"
version = "0.1.0"
description = "Employee Attrition Prediction using Decision Trees"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pydot>=4.0.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
[tool.setuptools]
py-modules = []
